# poultry_Rag

./: .env  .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/poultry_rag/: __init__.py  main.py  monitor_website.py  previous_hash.txt  utils.py  vectorstore.py
src/poultry_rag/db/: chroma.sqlite3
src/poultry_rag/pages/: disease_diagnose.py  egg_prices.py  lab_analysis.py  profit_calculator.py
