[project]
name = "poultry-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DoniaBatool", email = "donia1510aptech@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "numpy>=2.2.3",
    "pdfplumber>=0.11.5",
    "pymupdf>=1.25.3",
    "pypdf>=5.3.1",
    "pytesseract>=0.3.13",
    "selenium>=4.30.0",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.43.2",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
poultry-rag = "poultry_rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
